--- a/_4337Project/4337Project/_4337_d0h.xaml
+++ b/_4337Project/4337Project/_4337_d0h.xaml
@@ -1,14 +1,24 @@
 ﻿<Window x:Class="_4337Project._4337_d0h"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:_4337Project"
         mc:Ignorable="d"
         Title="_4337_d0h" Height="450" Width="800">
     <Grid>
-        <Label Content="d0h" HorizontalAlignment="Left" Margin="267,198,0,0" VerticalAlignment="Top"/>
-        <Label Content="mne 19" HorizontalAlignment="Left" Margin="282,229,0,0" VerticalAlignment="Top"/>
+        <StackPanel HorizontalAlignment="Left" Margin="30">
+            <!-- Имя -->
+            <Label Content="d0h" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,0,5"/>
 
+            <!-- Возраст -->
+            <Label Content="mne 19" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,0,5"/>
+
+            <!-- Кнопка импорта -->
+            <Button x:Name="Import" Content="Импорт данных" Width="100" Height="100" Margin="0,0,0,5" Click="Import_Click" />
+
+            <!-- Кнопка экспорта -->
+            <Button x:Name="Export" Content="Экспорт в Excel"  Width="100" Height="100" Margin="0,0,0,5" Click="Export_Click" />
+        </StackPanel>
     </Grid>
 </Window>
